WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171980
Offer SPI to notify clients that GC has happened
https://bugs.webkit.org/show_bug.cgi?id=171980
Summary
Offer SPI to notify clients that GC has happened
Filip Pizlo
Reported
2017-05-11 10:51:17 PDT
Patch forthcoming.
Attachments
work in progress
(20.10 KB, patch)
2017-05-11 10:51 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
it seems to work
(23.74 KB, patch)
2017-05-11 11:35 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
the patch
(23.75 KB, patch)
2017-05-11 11:42 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
patch for landing
(23.79 KB, patch)
2017-05-11 12:07 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-05-11 10:51:51 PDT
Created
attachment 309725
[details]
work in progress
Filip Pizlo
Comment 2
2017-05-11 11:35:17 PDT
Created
attachment 309735
[details]
it seems to work
Geoffrey Garen
Comment 3
2017-05-11 11:42:09 PDT
Comment on
attachment 309735
[details]
it seems to work r=me
Filip Pizlo
Comment 4
2017-05-11 11:42:40 PDT
Created
attachment 309737
[details]
the patch
Build Bot
Comment 5
2017-05-11 11:45:35 PDT
Attachment 309737
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/API/JSHeapFinalizerPrivate.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 6
2017-05-11 12:07:14 PDT
Created
attachment 309746
[details]
patch for landing I think that I fixed the build issues.
Build Bot
Comment 7
2017-05-11 12:08:58 PDT
Attachment 309746
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/API/JSHeapFinalizerPrivate.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 8
2017-05-11 12:59:22 PDT
Landed in
https://trac.webkit.org/changeset/216689/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug